fixing rocq dependency in opam file

--- a/rocq-partial-orders.opam
+++ b/rocq-partial-orders.opam
@@ -19,7 +19,8 @@ build: [
 ]
 install: [make "install"]
 depends: [
-  "rocq-prover" {>= "9.0"}
+  "rocq-core" {>= "9.0"}
+  "rocq-stdlib"
   "rocq-mathcomp-ssreflect"
 ]
 
